--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "signupapi",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+  "type":"module",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --watch index.js"
@@ -14,6 +15,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongoose": "^8.9.6",
     "multer": "^1.4.5-lts.1",
