--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "signupapi",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
-  
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --watch index.js"
@@ -19,6 +18,7 @@
     "express": "^4.21.2",
     "mongoose": "^8.9.6",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "puppeteer": "^24.2.0"
   }
 }
