--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3000
 MONGO_URI=mongodb+srv://pradeep:pradeepsahdb@cluster0.yngar.mongodb.net/MindLeague?retryWrites=true&w=majority&appName=Cluster0
 EMAIL_USER=pradeepsah9761@gmail.com
 EMAIL_PASSWORD=iccn kykf rhnk sxlw
+JWT_SECRET=jwtSecretKey
